# i16_check_nexus_data

./: .gitignore  README.md  check_i16_nexus.py  nexus_validator.py  pyproject.toml
examples/: dat_file_conversion.py  example.py
src/check_nexus/: __init__.py  __main__.py  check.py  cli.py  dat_file_comparison.py  metadata.py  validate.py
