[build-system]
requires = ["setuptools >= 61.0", "wheel", "pytest", "h5py", "punx"]
build-backend = "setuptools.build_meta"

[project]
name = "check_nexus"  # dls_check_nexus? i16_check_nexus? dls_mmg_check_nexus?
dynamic = ['version']
dependencies = [
  "h5py>=3.11.0",
  "punx"
]
requires-python = ">=3.10"
authors = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
maintainers = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
description = "Validate NeXus files on I16 against Diamond standard"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  'nexus',
]
classifiers = [
  'Programming Language :: Python :: 3.10',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering :: Physics',
  'License :: OSI Approved :: Apache Software License',
  'Development Status :: 3 - Alpha',
]

[project.scripts]
check_nexus = "check_nexus.cli:cli_check_nexus"
validate_nexus = "check_nexus.cli:cli_validate_nexus"

[tool.setuptools.dynamic]
version = {attr = "check_nexus.__version__"}
